Tue May  2  2:22:00 2000  Corinna Vinschen <corinna@vinschen.de>

        * dcrt0.cc: Add dynamic load code for `OemToCharA' from user32.dll.
        * security.cc (read_sd): Call `OemToCharA' to make
        `GetFileSecurity' happy on filenames with umlauts.

Wed Apr 26 23:23:23 2000  Christopher Faylor <cgf@cygnus.com>

	* path.cc (normalize_win32_path): Don't add a trailing slash when one
	already exists.
	(mount_info::conv_to_win32_path): Use existing code for dealing with
	relative path names when input is already a win32 path.

2000-04-26  DJ Delorie  <dj@cygnus.com>

	* Makefile.in (install): install regexp.h
	
Wed Apr 26 16:20:00 2000  Corinna Vinschen <corinna@vinschen.de>

        * syscalls.cc (stat_worker): Previous patch could succeed
        in stating a non-existant file.

Wed Apr 26 01:07:16 2000  Christopher Faylor <cgf@cygnus.com>

	* exceptions.cc (interruptible): Allocate slightly more space for
	directory name check.  Windows 95 seems to null-terminate the directory
	otherwise.
	(interrupt_on_return): Issue a fatal error if we can't find the
	caller's stack.

Tue Apr 25 16:50:54 2000  Christopher Faylor <cgf@cygnus.com>

	* spawn.cc (find_exec): Accept a path_conv argument rather than a
	buffer so that the caller can find things out about a translated path.
	(perhaps_suffix): Ditto.
	(spawn_guts): Allocate path_conv stuff here so that we can find out
	stuff about the translated path (this is work in progress).
	* environ.cc (environ_init): Accept an as-yet unused argument
	indicating whether we were invoked from a cygwin parent or not.
	(winenv): Ditto.
	(posify): Accept an argument indicating whether the path has already
	been translated.
	* dlfcn.cc (check_access): Provide a path_conv buffer to find_exec.
	* exec.cc (sexecvpe): Ditto.
	* path.cc (path_conv::check): Rename from path_conv::path_conv.
	(mount_item::getmntent): Recognize "Cygwin executable" bit.
	(symlink_info::check): Remove debugging statements.