@@ -1,3 +1,8 @@
+Tue May  2 11:34:00 2000  Corinna Vinschen <corinna@vinschen.de>
+
+        * security.cc (read_sd): Return 1 on success because we
+        can't rely on the returned SD size from GetFileSecurity.
+
 Tue May  2  2:22:00 2000  Corinna Vinschen <corinna@vinschen.de>
 
         * dcrt0.cc: Add dynamic load code for `OemToCharA' from user32.dll.
